# cprices

./: .dockerignore  .gitignore  README.md
.github/workflows/: snyk.yml
cprices/: Cargo.toml  Makefile
cprices/src/: binance.rs  data.rs  lib.rs  limiter.rs  main.rs  postgresql.rs
deploy/local/: Makefile  docker-compose.yaml
deploy/local/grafana/: datasources.yaml
deploy/local/grafana/dashboards/: exported_dashboard.json
deploy/local/postgresql/: init.sql.in
sql/: 000001_tables.down.sql  000001_tables.up.sql
