[package]
name = "cprices"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
clap = "3.0.0-beta.5"
env_logger = "0.9.0"
log = "0.4.17"
chrono = "0.4"
serde_json = "1"
async-trait = "0.1.57"
serde = { version = "1.0", features = ["derive"] }
deadpool-postgres = { version = "0.9" }
tokio-postgres = { version = "0.7.2", features = ["with-chrono-0_4"] }
governor = "0.5.0"

[dev-dependencies]
approx = "0.5.1"

[lib]
name = "cprices"
path = "src/lib.rs"

[[bin]]
name = "importer"
path = "src/main.rs"
